// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Typography renders Body1 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "400",
        "letterSpacing": 0.0015,
        "lineHeight": 36,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Body2 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 22,
        "fontStyle": "normal",
        "fontWeight": "400",
        "letterSpacing": 0.0015,
        "lineHeight": 33,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Body3 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 20,
        "fontStyle": "normal",
        "fontWeight": "400",
        "letterSpacing": 0.0015,
        "lineHeight": 30,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Body4 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "400",
        "letterSpacing": 0.0015,
        "lineHeight": 27,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Body5 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "letterSpacing": 0.005,
        "lineHeight": 22,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Body6 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "400",
        "letterSpacing": 0.025,
        "lineHeight": 21,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Body7 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 16,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Button1 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "600",
        "letterSpacing": 0.0015,
        "lineHeight": 24,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Button2 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "600",
        "letterSpacing": 0.015,
        "lineHeight": 21,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Button3 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "600",
        "letterSpacing": 0.04,
        "lineHeight": 16,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Caption1 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "400",
        "letterSpacing": 0.004,
        "lineHeight": 16,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Caption2 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 10,
        "fontStyle": "normal",
        "fontWeight": "400",
        "letterSpacing": 0.004,
        "lineHeight": 15,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Caption3 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 10,
        "fontStyle": "normal",
        "fontWeight": "600",
        "letterSpacing": 0.004,
        "lineHeight": 15,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Display1 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 64,
        "fontWeight": "600",
        "letterSpacing": -0.015,
        "lineHeight": 96,
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Display1 2`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 64,
        "fontWeight": "600",
        "letterSpacing": -0.015,
        "lineHeight": 96,
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Display2 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 54,
        "fontWeight": "600",
        "letterSpacing": -0.005,
        "lineHeight": 81,
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Display3 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 48,
        "fontWeight": "600",
        "lineHeight": 72,
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders H1 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 40,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 60,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders H2 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 32,
        "fontStyle": "normal",
        "fontWeight": "600",
        "letterSpacing": 0.0015,
        "lineHeight": 48,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders H3 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "600",
        "letterSpacing": 0.0015,
        "lineHeight": 36,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders H4 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 22,
        "fontStyle": "normal",
        "fontWeight": "600",
        "letterSpacing": 0.0015,
        "lineHeight": 33,
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders H5 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "600",
        "letterSpacing": -0.0015,
        "lineHeight": 27,
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders H6 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "600",
        "letterSpacing": -0.0015,
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Link1 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 16,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Subtitle1 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-Regular",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "400",
        "letterSpacing": 0.015,
        "lineHeight": 27,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Subtitle2 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "600",
        "letterSpacing": 0.001,
        "lineHeight": 24,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Subtitle3 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "600",
        "letterSpacing": 0.0125,
        "lineHeight": 21,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;

exports[`component: Typography renders Subtitle4 1`] = `
<Text
  style={
    [
      {
        "color": "#25282D",
      },
      {
        "fontFamily": "Poppins-SemiBold",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "600",
        "lineHeight": 16,
        "textAlign": "left",
      },
    ]
  }
>
  Hello world
</Text>
`;
